Додано зміну іконки у дошки. Оновлено сваггер
